[tool.poetry]
authors = ["Alex Povel <python@alexpovel.de>"]
description = "Substitute alternative spellings of native characters (e.g. German umlauts [ae, oe, ue] etc. [ss]) with their correct versions (ä, ö, ü, ß)."
license = "MIT"
name = "betterletter"
readme = "README.md"
repository = "https://github.com/alexpovel/betterletter/"
version = "1.0.0"

[tool.poetry.dependencies]
pyperclip = "^1.8.2"
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.930"
pytest = "^6.2.5"
snakeviz = "^2.1.1"

[tool.poetry.scripts]
betterletter = "betterletter.__main__:main"

[tool.mypy]
strict = true
exclude = "tests/*"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
