[tool.poetry]
authors = ["Alex Povel <python@alexpovel.de>"]
description = "Substitute alternative spellings of native characters (e.g. German umlauts [ae, oe, ue] etc. [ss]) with their correct versions (ä, ö, ü, ß)."
license = "MIT"
name = "betterletter"
readme = "README.md"
repository = "https://github.com/alexpovel/betterletter/"
version = "1.2.1"
keywords = ["spelling", "umlaut", "substitute", "letter", "alternative"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Natural Language :: German",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Office/Business",
    "Topic :: Text Editors",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/alexpovel/betterletter/issues"

[tool.poetry.dependencies]
pyperclip = "^1.8.2"
python = "^3.9"

[tool.poetry.scripts]
betterletter = "betterletter.__main__:main"

[tool.poetry.group.dev.dependencies]
black = ">=22.12,<24.0"
mypy = ">=0.991,<1.2"
pytest = "^7.2.0"
snakeviz = "^2.1.1"
pytest-cov = "^4.0.0"
ruff = ">=0.0.224,<0.0.258"
pre-commit = "^3.0.0"

[tool.mypy]
exclude = "tests/*"
mypy_path = "stubs/"
show_error_codes = true
strict = true
namespace_packages = true
disallow_any_unimported = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
# `E501` is line length violation
ignore = ["E501"]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 80.0
